# qrng-data-diode

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile.collector  Dockerfile.gateway  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-build.yml
article/: QRNG_SoftwareX_Article.md
config/: collector.yaml  gateway-direct.yaml  gateway-push.yaml
docs/: ARCHITECTURE.md  BENCHMARK.md  BUILD_REPORT.md  DOCKER_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MCP-INTEGRATION.md  PERFORMANCE_TESTING.md  PROJECT_SUMMARY.md  SECURITY-ANALYSIS.md  SOFTWAREX_MANUSCRIPT.md  SOFTWAREX_PROPOSAL.md  USAGE_GUIDE.md  aggregating-multiple-sources1.md  aggregating-multiple-sources2.md  comparison_table.md  implementation-plan.md  multi-source-aggregation.md  performance_benchmarks.md  quantis-bridge-article.md  security_analysis.md
entropy-collector/: Cargo.toml
entropy-collector/src/: main.rs
entropy-gateway/: Cargo.toml
entropy-gateway/src/: main.rs
examples/: README.md  ideas.txt
examples/dice-roller/: Cargo.toml  README.md
examples/dice-roller/src/: main.rs
examples/knapsack-ga/: Cargo.toml  README.md
examples/knapsack-ga/src/: main.rs
examples/lottery-draw/: Cargo.toml  README.md
examples/lottery-draw/src/: main.rs
examples/monte-carlo-pi/: Cargo.toml  README.md
examples/monte-carlo-pi/src/: main.rs
examples/password-generator/: Cargo.toml  README.md
examples/password-generator/src/: main.rs
examples/qrand-uuid/: Cargo.toml  README.md
examples/qrand-uuid/src/: main.rs
examples/randbytes/: Cargo.toml  README.md
examples/randbytes/src/: main.rs
examples/randfloat/: Cargo.toml  README.md
examples/randfloat/src/: main.rs
examples/randint/: Cargo.toml  README.md
examples/randint/src/: main.rs
examples/random-walk/: Cargo.toml  README.md
examples/random-walk/src/: main.rs
examples/randomness-tests/: Cargo.toml  README.md
examples/randomness-tests/src/: main.rs
examples/secure-key-generator/: Cargo.toml  README.md
examples/secure-key-generator/src/: main.rs
examples/shuffle-demo/: Cargo.toml  README.md
examples/shuffle-demo/src/: main.rs
examples/terrain-generator/: Cargo.toml  README.md  terrain.pgm
examples/terrain-generator/src/: main.rs
examples/tsp-simulated-annealing/: Cargo.toml  README.md
examples/tsp-simulated-annealing/src/: main.rs
qrng-collector/: .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
qrng-collector/src/: main.rs
qrng-core/: Cargo.toml
qrng-core/src/: buffer.rs  config.rs  crypto.rs  error.rs  fetcher.rs  lib.rs  metrics.rs  mixer.rs  protocol.rs  retry.rs
qrng-gateway/: .env  .env.example  Cargo.toml  Dockerfile  docker-compose.direct.yml  docker-compose.yml
qrng-gateway/src/: main.rs
qrng-mcp/: .env.example  Cargo.toml  Dockerfile
qrng-mcp/src/: lib.rs  main.rs
scripts/: README.md  benchmark-performance.ps1  benchmark-simple.ps1  burst-test.ps1  consume-random.ps1  mcp_bridge.ps1  test-randomness.ps1
