[workspace]
resolver = "2"
members = [
    "qrng-core",
    "entropy-collector",
    "entropy-gateway",
    "qrng-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["QRNG Data Diode Contributors"]
repository = "https://github.com/yourusername/qrng-data-diode"
keywords = ["quantum", "rng", "entropy", "cryptography", "security"]
categories = ["cryptography", "network-programming", "science"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# HTTP/Web
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.3"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
crc32fast = "1.4"
rand = "0.8"

# Configuration
config = { version = "0.14", features = ["yaml"] }

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Utilities
bytes = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5"

# Testing
mockito = "1.5"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
