[workspace]
resolver = "2"
members = [
    "qrng-core",
    "qrng-collector",
    "qrng-gateway",
    "qrng-mcp",
]
exclude = [
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Valer Bocan, PhD, CSSLP"]
repository = "https://github.com/vbocan/qrng-data-diode"
keywords = ["quantum", "rng", "entropy", "cryptography", "security"]
categories = ["cryptography", "network-programming", "science"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"

# HTTP/Web
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
hyper = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
crc32fast = "1.5"
rand = "0.9"

# Configuration
envy = "0.4"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
metrics = "0.24"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
parking_lot = "0.12"

# Utilities
bytes = "1.11"
uuid = { version = "1.19", features = ["v4", "serde"] }
url = "2.5"

# Testing
mockito = "1.7"
proptest = "1.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
