[package]
name = "qrng-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "qrng-collector"
path = "src/main.rs"

[dependencies]
qrng-core = { path = "../qrng-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["signal"] }
