[package]
name = "qrng-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rmp-serde = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
config = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
base64 = "0.22"
serde_bytes = "0.11"

[dev-dependencies]
mockito = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
