[package]
name = "qrng-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "qrng-gateway"
path = "src/main.rs"

[dependencies]
qrng-core = { path = "../qrng-core" }
tokio = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
chrono = { workspace = true }
hex = "0.4"
parking_lot = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
