[package]
name = "qrng-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
qrng-core = { path = "../qrng-core" }
rmcp = { version = "0.8.5", features = ["server", "transport-sse-server", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
hex = "0.4"
schemars = { version = "1.0", features = ["chrono04"] }
tracing = { workspace = true }

[dev-dependencies]
