[package]
name = "qrng-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "qrng-mcp"
path = "src/main.rs"

[dependencies]
# No qrng-core dependency - MCP is a thin wrapper with no QRNG logic
rmcp = { version = "0.10.0", features = ["server", "transport-sse-server", "transport-streamable-http-server", "macros"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
schemars = { version = "1.1", features = ["chrono04"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tower = "0.5"
http = "1.4"
http-body-util = "0.1"

[dev-dependencies]
